src/objects/ints__EfxReport_Other_Income__c.object
<CustomObject>
    <fields>
        <fullName>ints__Amount__c</fullName>
        <label>Amount</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__DateReported__c</fullName>
        <label>DateReported</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport Other Incomes</relationshipLabel>
        <relationshipName>EfxReport_Other_Incomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__IncomeSource__c</fullName>
        <label>IncomeSource</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__VerificationDate__c</fullName>
        <label>VerificationDate</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Other Income</label>
    <nameField>
        <displayFormat>EFX-O-INCOME-{0000000000}</displayFormat>
        <label>Equifax Other Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Other Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>